# arch-specs

./: .gitignore  .gitmodules  README.md
.github/workflows/: checkspecs.yml
attic/: avx2.spec
checkspecs/: checkspecs.opam  dune-project
checkspecs/src/: checkspecs.ml  dune
checkspecs/src/avx2/: avx2.ml  avx2_runtime.cpp  avx2_runtime.h  bindings.avx2.json  dune
checkspecs/src/avx2/scripts/: bindings.py
ec/: bindings.ec
specs/: avx2.spec
