(env
 (dev     (flags :standard -rectypes -w @1..3@5..28@31..39@43@46..47@49..57@61..62-40-9-23-32-67-69 -warn-error -a+31))
 (ci      (flags :standard -rectypes -w @1..3@5..28@31..39@43@46..47@49..57@61..62-40-9-23-32-67-69 -warn-error +a))
 (release (flags :standard -rectypes -w @1..3@5..28@31..39@43@46..47@49..57@61..62-40-9-23-32-67-69 -warn-error -a)
          (ocamlopt_flags -O3 -unbox-closures)))

(include_subdirs unqualified)

(rule
 (enabled_if (or (= %{architecture} "amd64")
                 (= %{architecture} "i386")
                 (= %{architecture} "x86_64")))
 (targets avx2_arch_flags.sexp)
 (action (write-file %{targets} "-mavx2")))

(rule
 (enabled_if (not (or (= %{architecture} "amd64")
                      (= %{architecture} "i386")
                      (= %{architecture} "x86_64"))))
 (targets avx2_arch_flags.sexp)
 (action (write-file %{targets} "-DSIMDe")))

(executable
  (name checkspecs)
  (public_name checkspecs)
  (promote (until-clean) (into ..))
  (foreign_stubs
    (language cxx)
    (names avx2_runtime)
    (flags (:standard -std=gnu++17 (:include avx2_arch_flags.sexp)))
    (include_dirs ../submodules/simde))
  (libraries batteries cmdliner hex progress easycrypt.lospecs))
